Fixed top spacing for sidebar title.

--- a/src/assets/stylesheets/pages/cv/sidebar.less
+++ b/src/assets/stylesheets/pages/cv/sidebar.less
@@ -21,7 +21,7 @@
   box-sizing: border-box;
 
   &-title {
-    margin-top: 70px;
+    margin-top: 50px;
     padding: 5px 0;
     border: 2px solid @text-color-quaternary;
     margin-bottom: 5px;
